--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lovro Popovic | Software Developer</title>
+    <title>Lovro</title>
     <meta name="description" content="Portfolio of Lovro Popovic — Software Developer specializing in React and modern web technologies." />
     <link rel="preconnect" href="https://rsms.me/" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
